--- a/front-end/style.css
+++ b/front-end/style.css
@@ -14,6 +14,21 @@ body {
     width: fit-content;
 }
 
+.tipo_critico {
+    border: thin solid;
+    padding: 0.6ch 0.5ch 0.5ch 0.5ch;
+    user-select: none;
+    cursor: pointer;
+}
+
+.tipo_critico[tipo="acerto"]:has(input:checked) {
+    background-color: green;
+}
+
+.tipo_critico[tipo="erro"]:has(input:checked) {
+    background-color: red;
+}
+
 #container-tabelas {
     display: flex;
     gap: 1ch;
